Self/mydevorg/packaged/TimbaSurveys/objects/Log__c.object
<CustomObject>
    <description>Timba Surveys Exceptions Log</description>
    <fields>
        <fullName>Extra_Comments__c</fullName>
        <label>Extra Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>className__c</fullName>
        <description>Class that causes the exception</description>
        <label>Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>